feat: add headers input for todo

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -124,7 +124,11 @@
     <div class="todo-wrapper todo-close">
       <div class="todo-content">
         <div class="todo-header-wrapper">
-          <p class="todo-header">ToDo List</p>
+          <select class="todo-header" id="switch-todo" name="todoHeaderBlock">
+            <option value="0" selected>Active</option>
+            <option value="1">Completed</option>
+            <option value="2">Deleted</option>
+          </select>
           <button class="todo-close-button"></button>
         </div>
         <div class="todo-list"></div>
