fix: change todo color

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -125,9 +125,9 @@
       <div class="todo-content">
         <div class="todo-header-wrapper">
           <select class="todo-header" id="switch-todo" name="todoHeaderBlock">
-            <option value="0" selected>Active</option>
-            <option value="1">Completed</option>
-            <option value="2">Deleted</option>
+            <option class="todo-header-list" value="0" selected>Active</option>
+            <option class="todo-header-list" value="1">Completed</option>
+            <option class="todo-header-list" value="2">Deleted</option>
           </select>
           <button class="todo-close-button"></button>
         </div>
