--- a/momentum/src/index.html
+++ b/momentum/src/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="assets/favicon.ico" rel="shortcut icon" />
-  <link rel="stylesheet" href="css/owfont-regular.css" />
-  <link rel="stylesheet" href="css/style.css" />
+  <!-- <link rel="stylesheet" href="css/owfont-regular.css" /> -->
+  <!-- <link rel="stylesheet" href="css/style.css" /> -->
   <title>Momentum</title>
 </head>
 <body>
@@ -158,6 +158,6 @@
     </div>
   </footer>
   <!-- <script src="./js/script.js"></script> -->
-  <script type="module" src="./js/index.js"></script>
+  <!-- <script type="module" src="./js/index.js"></script> -->
 </body>
 </html>
