fix: fix todos bugs

--- a/momentum/src/index.html
+++ b/momentum/src/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="assets/favicon.ico" rel="shortcut icon" />
-  <!-- <link rel="stylesheet" href="css/owfont-regular.css" /> -->
-  <!-- <link rel="stylesheet" href="css/style.css" /> -->
+  <link rel="stylesheet" href="css/owfont-regular.css" />
+  <link rel="stylesheet" href="css/style.css" />
   <title>Momentum</title>
 </head>
 <body>
@@ -52,7 +52,7 @@
       <input type="text" class="name" />
     </div>
     <div class="settings-wrapper">
-      <div name="form" class="settings-form">
+      <div name="form" class="settings-form hidden-block">
         <div class="settings-content">
           <div class="settings-block">
             <p class="setting-lang">Изменить язык</p>
@@ -121,7 +121,7 @@
           </div>
       </div>
     </div>
-    <div class="todo-wrapper todo-close">
+    <div class="todo-wrapper todo-close hidden-block">
       <div class="todo-content">
         <div class="todo-header-wrapper">
           <select class="todo-header" id="switch-todo" name="todoHeaderBlock">
@@ -158,6 +158,6 @@
     </div>
   </footer>
   <!-- <script src="./js/script.js"></script> -->
-  <!-- <script type="module" src="./js/index.js"></script> -->
+  <script type="module" src="./js/index.js"></script>
 </body>
 </html>
